--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "next": "15.1.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
