--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.0.2",
+    "command": "^0.0.5",
     "firebase-admin": "^13.0.2",
     "jose": "^5.9.6",
     "lucide-react": "^0.469.0",
