--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.2",
     "command": "^0.0.5",
+    "date-fns": "^3.6.0",
     "firebase-admin": "^13.0.2",
     "jose": "^5.9.6",
     "lucide-react": "^0.469.0",
@@ -37,6 +38,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
